Added the gearsDroppedHuman catergory
Now we can scout how many times the human player dropped the gears.

--- a/app/src/main/res/layout-land/teleop_fragment.xml
+++ b/app/src/main/res/layout-land/teleop_fragment.xml
@@ -109,10 +109,51 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:text="Gears Dropped(Human):"
+            android:id="@+id/gearsDroppedHumanTextView"
+            android:layout_below="@+id/amountGearsDroppedTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:textSize="10sp"/>
+
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:text="-"
+            android:id="@+id/decreaseGearsDroppedHumanButton"
+            android:layout_below="@+id/gearsDroppedHumanTextView"
+            android:layout_alignRight="@+id/decreaseGearsDroppedButton"
+            android:layout_alignEnd="@+id/decreaseGearsDroppedButton"
+            android:paddingTop="5dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/amountGearsDroppedHumanTextView"
+            android:layout_alignBottom="@+id/decreaseGearsDroppedHumanButton"
+            android:layout_centerHorizontal="true"
+            android:textSize="10sp"/>
+
+        <Button
+            android:layout_width="40dp"
+            android:layout_height="30dp"
+            android:text="+"
+            android:id="@+id/increaseGearsDroppedHumanButton"
+            android:layout_below="@+id/gearsDroppedHumanTextView"
+            android:layout_alignLeft="@+id/increaseGearsDroppedButton"
+            android:layout_alignStart="@+id/increaseGearsDroppedButton"
+            android:paddingTop="5dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Gears Placed:"
             android:id="@+id/gearsPlacedTextView"
-            android:layout_below="@+id/amountGearsDroppedTextView"
+            android:layout_below="@+id/amountGearsDroppedHumanTextView"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:textSize="10sp"/>
@@ -123,8 +164,8 @@
             android:text="-"
             android:id="@+id/decreaseGearsPlacedButton"
             android:layout_below="@+id/gearsPlacedTextView"
-            android:layout_alignRight="@+id/decreaseGearsDroppedButton"
-            android:layout_alignEnd="@+id/decreaseGearsDroppedButton"
+            android:layout_alignRight="@+id/decreaseGearsDroppedHumanButton"
+            android:layout_alignEnd="@+id/decreaseGearsDroppedHumanButton"
             android:paddingTop="5dp"/>
 
         <Button
@@ -133,8 +174,8 @@
             android:text="+"
             android:id="@+id/increaseGearsPlacedButton"
             android:layout_below="@+id/gearsPlacedTextView"
-            android:layout_alignLeft="@+id/increaseGearsDroppedButton"
-            android:layout_alignStart="@+id/increaseGearsDroppedButton"
+            android:layout_alignLeft="@+id/increaseGearsDroppedHumanButton"
+            android:layout_alignStart="@+id/increaseGearsDroppedHumanButton"
             android:paddingTop="5dp"/>
 
         <TextView
