--- a/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
@@ -110,10 +110,51 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:text="Gears Dropped(Human):"
+            android:id="@+id/gearsDroppedHumanTextView"
+            android:layout_below="@+id/amountGearsDroppedTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:textSize="30sp"/>
+
+        <Button
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:text="-"
+            android:id="@+id/decreaseGearsDroppedHumanButton"
+            android:layout_below="@+id/gearsDroppedHumanTextView"
+            android:layout_alignRight="@+id/decreaseGearsDroppedButton"
+            android:layout_alignEnd="@+id/decreaseGearsDroppedButton"
+            android:paddingTop="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:text="0"
+            android:id="@+id/amountGearsDroppedHumanTextView"
+            android:layout_alignBottom="@+id/decreaseGearsDroppedHumanButton"
+            android:layout_centerHorizontal="true"
+            android:textSize="25sp"/>
+
+        <Button
+            android:layout_width="70dp"
+            android:layout_height="40dp"
+            android:text="+"
+            android:id="@+id/increaseGearsDroppedHumanButton"
+            android:layout_below="@+id/gearsDroppedHumanTextView"
+            android:layout_alignLeft="@+id/increaseGearsDroppedButton"
+            android:layout_alignStart="@+id/increaseGearsDroppedButton"
+            android:paddingTop="10dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Gears Placed:"
             android:id="@+id/gearsPlacedTextView"
-            android:layout_below="@+id/amountGearsDroppedTextView"
+            android:layout_below="@+id/amountGearsDroppedHumanTextView"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:textSize="30sp"/>
