--- a/app/src/main/res/layout/activity_edit_data.xml
+++ b/app/src/main/res/layout/activity_edit_data.xml
@@ -262,9 +262,28 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:textAppearanceMedium"
+        android:text="Gears Dropped(Human)"
+        android:id="@+id/gearsDroppedHumanTV"
+        android:layout_below="@+id/gearsDroppedEnterText"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"/>
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/gearsDroppedHumanEnterText"
+        android:hint="Gears Dropped(Human)"
+        android:layout_below="@+id/gearsDroppedHumanTV"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
         android:text="Climb Time"
         android:id="@+id/climbTimeTV"
-        android:layout_below="@+id/gearsDroppedEnterText"
+        android:layout_below="@+id/gearsDroppedHumanEnterText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
     <EditText
