--- a/app/src/main/res/layout-xlarge/activity_start_menu.xml
+++ b/app/src/main/res/layout-xlarge/activity_start_menu.xml
@@ -87,5 +87,14 @@
         android:layout_marginTop="15dp"
         android:layout_marginLeft="10dp"/>
 
+    <Button
+        android:layout_width="150dp"
+        android:layout_height="70dp"
+        android:text="Choose Event"
+        android:id="@+id/chooseEventButtons"
+        android:layout_below="@+id/viewPhoto"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"/>
+
 </RelativeLayout>
 </ScrollView>
