--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -19,10 +19,10 @@
         android:text="Gears Picked Up:"
         android:id="@+id/gearsPickedUpTextView"
         android:textSize="10sp"
+        android:layout_marginTop="28dp"
         android:layout_below="@+id/teleopPeriodTextView"
-        android:layout_alignRight="@+id/gearsDroppedTextView"
-        android:layout_alignEnd="@+id/gearsDroppedTextView"
-        android:layout_marginTop="10dp" />
+        android:layout_alignRight="@+id/gearsPlacedTextView"
+        android:layout_alignEnd="@+id/gearsPlacedTextView" />
 
     <TextView
         android:layout_width="wrap_content"
