--- a/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/teleop_fragment.xml
@@ -197,13 +197,13 @@
             android:layout_marginTop="15dp"
             android:layout_below="@+id/amountGearsPlacedTextView"
             android:layout_centerHorizontal="true"
-            android:textSize="30sp"/>
+            android:textSize="35sp"/>
 
         <SeekBar
-            android:layout_width="400dp"
+            android:layout_width="800dp"
             android:layout_height="wrap_content"
             android:id="@+id/climbTimeSeekBar"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="20dp"
             android:max="20"
             android:progress="0"
             android:indeterminate="false"
@@ -220,7 +220,8 @@
             android:textSize="30dp"
             android:layout_below="@+id/climbTimeSeekBar"
             android:layout_alignLeft="@+id/climbTimeSeekBar"
-            android:layout_alignStart="@+id/climbTimeSeekBar"/>
+            android:layout_alignStart="@+id/climbTimeSeekBar"
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -230,7 +231,8 @@
             android:id="@+id/climbCountTextView"
             android:textSize="30dp"
             android:layout_below="@+id/climbTimeSeekBar"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -241,6 +243,7 @@
             android:textSize="30dp"
             android:layout_below="@+id/climbTimeSeekBar"
             android:layout_alignRight="@+id/climbTimeSeekBar"
-            android:layout_alignEnd="@+id/climbTimeSeekBar"/>
+            android:layout_alignEnd="@+id/climbTimeSeekBar"
+            android:layout_marginTop="5dp" />
     </RelativeLayout>
 </ScrollView>
