--- a/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
@@ -19,10 +19,10 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="Gears Picked Up:"
             android:id="@+id/gearsPickedUpTextView"
-            android:textSize="30sp"
+            android:textSize="35sp"
+            android:layout_marginTop="50dp"
             android:layout_below="@+id/teleopPeriodTextView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"/>
+            android:layout_centerHorizontal="true" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -32,28 +32,29 @@
             android:id="@+id/teleopPeriodTextView"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:textSize="40sp"
+            android:textSize="47sp"
             android:layout_marginTop="5dp"/>
 
         <Button
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:text="-"
             android:id="@+id/decreaseGearsPickedUpButton"
             android:layout_below="@+id/gearsPickedUpTextView"
             android:layout_toLeftOf="@+id/gearsPickedUpTextView"
             android:layout_toStartOf="@+id/gearsPickedUpTextView"
-            android:paddingTop="10dp"/>
+            android:paddingTop="20dp"
+            android:layout_marginTop="10dp" />
 
         <Button
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:text="+"
             android:id="@+id/increaseGearsPickedUpButton"
+            android:paddingTop="20dp"
             android:layout_alignTop="@+id/decreaseGearsPickedUpButton"
             android:layout_toRightOf="@+id/gearsPickedUpTextView"
-            android:layout_toEndOf="@+id/gearsPickedUpTextView"
-            android:paddingTop="10dp"/>
+            android:layout_toEndOf="@+id/gearsPickedUpTextView" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -61,7 +62,7 @@
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:text="0"
             android:id="@+id/amountGearsPickedUpTextView"
-            android:textSize="25sp"
+            android:textSize="30sp"
             android:layout_alignBottom="@+id/increaseGearsPickedUpButton"
             android:layout_alignLeft="@+id/amountGearsDroppedTextView"
             android:layout_alignStart="@+id/amountGearsDroppedTextView" />
@@ -74,28 +75,30 @@
             android:id="@+id/gearsDroppedTextView"
             android:layout_below="@+id/amountGearsPickedUpTextView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:textSize="30sp"/>
+            android:layout_marginTop="25dp"
+            android:textSize="35sp"/>
 
         <Button
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:text="-"
             android:id="@+id/decreaseGearsDroppedButton"
             android:layout_below="@+id/gearsDroppedTextView"
             android:layout_alignRight="@+id/decreaseGearsPickedUpButton"
             android:layout_alignEnd="@+id/decreaseGearsPickedUpButton"
-            android:paddingTop="10dp"/>
+            android:paddingTop="20dp"
+            android:layout_marginTop="10dp" />
 
         <Button
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:text="+"
             android:id="@+id/increaseGearsDroppedButton"
             android:layout_below="@+id/gearsDroppedTextView"
             android:layout_alignLeft="@+id/increaseGearsPickedUpButton"
             android:layout_alignStart="@+id/increaseGearsPickedUpButton"
-            android:paddingTop="10dp"/>
+            android:paddingTop="20dp"
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -105,7 +108,7 @@
             android:id="@+id/amountGearsDroppedTextView"
             android:layout_alignBottom="@+id/increaseGearsDroppedButton"
             android:layout_centerHorizontal="true"
-            android:textSize="25sp"/>
+            android:textSize="35sp"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -115,18 +118,19 @@
             android:id="@+id/gearsDroppedHumanTextView"
             android:layout_below="@+id/amountGearsDroppedTextView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:textSize="30sp"/>
+            android:layout_marginTop="25dp"
+            android:textSize="35sp"/>
 
         <Button
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:text="-"
             android:id="@+id/decreaseGearsDroppedHumanButton"
             android:layout_below="@+id/gearsDroppedHumanTextView"
             android:layout_alignRight="@+id/decreaseGearsDroppedButton"
             android:layout_alignEnd="@+id/decreaseGearsDroppedButton"
-            android:paddingTop="10dp"/>
+            android:paddingTop="20dp"
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -136,17 +140,17 @@
             android:id="@+id/amountGearsDroppedHumanTextView"
             android:layout_alignBottom="@+id/decreaseGearsDroppedHumanButton"
             android:layout_centerHorizontal="true"
-            android:textSize="25sp"/>
+            android:textSize="35sp"/>
 
         <Button
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:text="+"
             android:id="@+id/increaseGearsDroppedHumanButton"
-            android:layout_below="@+id/gearsDroppedHumanTextView"
+            android:paddingTop="20dp"
+            android:layout_alignBottom="@+id/amountGearsDroppedHumanTextView"
             android:layout_alignLeft="@+id/increaseGearsDroppedButton"
-            android:layout_alignStart="@+id/increaseGearsDroppedButton"
-            android:paddingTop="10dp"/>
+            android:layout_alignStart="@+id/increaseGearsDroppedButton" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -156,28 +160,29 @@
             android:id="@+id/gearsPlacedTextView"
             android:layout_below="@+id/amountGearsDroppedHumanTextView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="10dp"
-            android:textSize="30sp"/>
+            android:layout_marginTop="25dp"
+            android:textSize="35sp"/>
 
         <Button
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:text="-"
             android:id="@+id/decreaseGearsPlacedButton"
-            android:layout_below="@+id/gearsPlacedTextView"
-            android:layout_alignRight="@+id/decreaseGearsDroppedButton"
-            android:layout_alignEnd="@+id/decreaseGearsDroppedButton"
-            android:paddingTop="10dp"/>
+            android:paddingTop="20dp"
+            android:layout_alignBottom="@+id/amountGearsPlacedTextView"
+            android:layout_toLeftOf="@+id/gearsPickedUpTextView"
+            android:layout_toStartOf="@+id/gearsPickedUpTextView" />
 
         <Button
-            android:layout_width="70dp"
-            android:layout_height="40dp"
+            android:layout_width="90dp"
+            android:layout_height="45dp"
             android:text="+"
             android:id="@+id/increaseGearsPlacedButton"
             android:layout_below="@+id/gearsPlacedTextView"
             android:layout_alignLeft="@+id/increaseGearsDroppedButton"
             android:layout_alignStart="@+id/increaseGearsDroppedButton"
-            android:paddingTop="10dp"/>
+            android:paddingTop="20dp"
+            android:layout_marginTop="10dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -187,23 +192,23 @@
             android:id="@+id/amountGearsPlacedTextView"
             android:layout_alignBottom="@+id/increaseGearsPlacedButton"
             android:layout_centerHorizontal="true"
-            android:textSize="25sp"/>
+            android:textSize="35sp"/>
 
         <CheckBox
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Successful Climb?"
             android:id="@+id/successfulclimbcheckBox"
-            android:textSize="30sp"
+            android:textSize="35sp"
             android:layout_below="@+id/amountGearsPlacedTextView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="35dp" />
 
         <SeekBar
-            android:layout_width="400dp"
+            android:layout_width="600dp"
             android:layout_height="wrap_content"
             android:id="@+id/climbTimeSeekBar"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="45dp"
             android:max="20"
             android:progress="0"
             android:indeterminate="false"
@@ -217,10 +222,11 @@
             android:textAppearance="?android:textAppearanceSmall"
             android:text="0"
             android:id="@+id/zeroTimeTextView"
-            android:textSize="25dp"
+            android:textSize="30dp"
             android:layout_below="@+id/climbTimeSeekBar"
             android:layout_alignLeft="@+id/climbTimeSeekBar"
-            android:layout_alignStart="@+id/climbTimeSeekBar"/>
+            android:layout_alignStart="@+id/climbTimeSeekBar"
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -228,9 +234,10 @@
             android:textAppearance="?android:textAppearanceSmall"
             android:text="ClimbTime: 0"
             android:id="@+id/climbCountTextView"
-            android:textSize="25dp"
+            android:textSize="35dp"
             android:layout_below="@+id/climbTimeSeekBar"
-            android:layout_centerHorizontal="true"/>
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="6dp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -238,10 +245,11 @@
             android:textAppearance="?android:textAppearanceSmall"
             android:text="20"
             android:id="@+id/twentyTimeTextView"
-            android:textSize="25dp"
+            android:textSize="30dp"
             android:layout_below="@+id/climbTimeSeekBar"
             android:layout_alignRight="@+id/climbTimeSeekBar"
-            android:layout_alignEnd="@+id/climbTimeSeekBar"/>
+            android:layout_alignEnd="@+id/climbTimeSeekBar"
+            android:layout_marginTop="5dp" />
 
     </RelativeLayout>
 </ScrollView>
