--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -18,11 +18,10 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Gears Picked Up:"
         android:id="@+id/gearsPickedUpTextView"
-        android:textSize="10sp"
-        android:layout_marginTop="28dp"
+        android:textSize="15sp"
+        android:layout_marginTop="30dp"
         android:layout_below="@+id/teleopPeriodTextView"
-        android:layout_alignRight="@+id/gearsPlacedTextView"
-        android:layout_alignEnd="@+id/gearsPlacedTextView" />
+        android:layout_centerHorizontal="true" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -32,11 +31,11 @@
         android:id="@+id/teleopPeriodTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        android:textSize="25sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="60dp"
+        android:layout_height="35dp"
         android:text="-"
         android:id="@+id/decreaseGearsPickedUpButton"
         android:layout_below="@+id/gearsPickedUpTextView"
@@ -45,8 +44,8 @@
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="60dp"
+        android:layout_height="35dp"
         android:text="+"
         android:id="@+id/increaseGearsPickedUpButton"
         android:layout_alignTop="@+id/decreaseGearsPickedUpButton"
@@ -60,7 +59,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="0"
         android:id="@+id/amountGearsPickedUpTextView"
-        android:textSize="10sp"
+        android:textSize="15sp"
         android:layout_alignBottom="@+id/increaseGearsPickedUpButton"
         android:layout_alignLeft="@+id/amountGearsDroppedTextView"
         android:layout_alignStart="@+id/amountGearsDroppedTextView" />
@@ -74,11 +73,11 @@
         android:layout_below="@+id/amountGearsPickedUpTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="60dp"
+        android:layout_height="35dp"
         android:text="-"
         android:id="@+id/decreaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
@@ -87,8 +86,8 @@
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="60dp"
+        android:layout_height="35dp"
         android:text="+"
         android:id="@+id/increaseGearsDroppedButton"
         android:layout_below="@+id/gearsDroppedTextView"
@@ -104,22 +103,22 @@
         android:id="@+id/amountGearsDroppedTextView"
         android:layout_alignBottom="@+id/increaseGearsDroppedButton"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:textAppearanceLarge"
-        android:text="Gears Dropped(Human):"
+        android:text="Gears Dropped (Human):"
         android:id="@+id/gearsDroppedHumanTextView"
         android:layout_below="@+id/amountGearsDroppedTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="60dp"
+        android:layout_height="35dp"
         android:text="-"
         android:id="@+id/decreaseGearsDroppedHumanButton"
         android:layout_below="@+id/gearsDroppedHumanTextView"
@@ -135,11 +134,11 @@
         android:id="@+id/amountGearsDroppedHumanTextView"
         android:layout_alignBottom="@+id/decreaseGearsDroppedHumanButton"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="60dp"
+        android:layout_height="35dp"
         android:text="+"
         android:id="@+id/increaseGearsDroppedHumanButton"
         android:layout_below="@+id/gearsDroppedHumanTextView"
@@ -156,11 +155,11 @@
         android:layout_below="@+id/amountGearsDroppedHumanTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="60dp"
+        android:layout_height="35dp"
         android:text="-"
         android:id="@+id/decreaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
@@ -169,8 +168,8 @@
         android:paddingTop="5dp"/>
 
     <Button
-        android:layout_width="40dp"
-        android:layout_height="30dp"
+        android:layout_width="60dp"
+        android:layout_height="35dp"
         android:text="+"
         android:id="@+id/increaseGearsPlacedButton"
         android:layout_below="@+id/gearsPlacedTextView"
@@ -186,14 +185,14 @@
         android:id="@+id/amountGearsPlacedTextView"
         android:layout_alignBottom="@+id/increaseGearsPlacedButton"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Successful Climb?"
         android:id="@+id/successfulclimbcheckBox"
-        android:textSize="13sp"
+        android:textSize="15sp"
         android:layout_below="@+id/amountGearsPlacedTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp" />
