--- a/app/src/main/res/layout-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-land/auto_period_fragment.xml
@@ -16,7 +16,7 @@
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        android:textSize="25sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -27,7 +27,7 @@
         android:layout_below="@+id/autoTextView"
         android:layout_centerHorizontal="true"
         android:checked="false"
-        android:textSize="10sp"/>
+        android:textSize="15dp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -38,7 +38,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:checked="false"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -49,7 +49,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:checked="false"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -61,7 +61,7 @@
         android:layout_below="@+id/gearSuccessCheckBox"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -72,7 +72,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:checked="false"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -84,13 +84,14 @@
         android:max="10"
         android:progress="0"
         android:indeterminate="false"
-        android:minWidth="250dp" />
+        android:minWidth="275dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="0"
+        android:textSize="15dp"
         android:id="@+id/zeroTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_alignLeft="@+id/autoBallsSeekBar"
@@ -101,9 +102,10 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="10"
+        android:textSize="15dp"
         android:id="@+id/tenTextView"
         android:layout_alignBottom="@+id/zeroTextView"
-        android:layout_toRightOf="@+id/zeroTextView"
+        android:layout_alignRight="@+id/autoBallsSeekBar"
         android:layout_marginLeft="250dp"/>
 
     <TextView
@@ -113,6 +115,6 @@
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_centerHorizontal="true"
-        android:textSize="10sp"/>
+        android:textSize="15sp"/>
 
 </RelativeLayout>
