--- a/app/src/main/res/layout-xlarge-land/auto_period_fragment.xml
+++ b/app/src/main/res/layout-xlarge-land/auto_period_fragment.xml
@@ -16,65 +16,65 @@
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="40sp"/>
+        android:textSize="50sp"/>
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Baseline Crossed?"
+        android:textSize="40sp"
         android:id="@+id/baselineCheckBox"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/autoTextView"
         android:layout_centerHorizontal="true"
-        android:checked="false"
-        android:textSize="30sp"/>
+        android:checked="false" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Attempted to place gear?"
+        android:textSize="40sp"
         android:id="@+id/gearAttemptCheckBox"
         android:layout_below="@+id/baselineCheckBox"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:checked="false"
-        android:textSize="30sp"/>
+        android:checked="false" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gear successfully placed?"
+        android:textSize="40sp"
         android:id="@+id/gearSuccessCheckBox"
         android:layout_below="@+id/gearAttemptCheckBox"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:checked="false"
-        android:textSize="30sp"/>
+        android:checked="false" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="High goal?"
+        android:textSize="40sp"
         android:id="@+id/highCheckBox"
         android:layout_marginTop="33dp"
         android:checked="false"
         android:layout_below="@+id/gearSuccessCheckBox"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginLeft="250dp"
-        android:textSize="30sp"/>
+        android:layout_marginLeft="250dp" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Low goal?"
+        android:textSize="40sp"
         android:id="@+id/lowCheckBox"
         android:layout_alignTop="@+id/highCheckBox"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:checked="false"
-        android:layout_marginRight="250dp"
-        android:textSize="30sp"/>
+        android:layout_marginRight="250dp" />
 
     <SeekBar
         android:layout_width="wrap_content"
@@ -86,36 +86,36 @@
         android:max="10"
         android:progress="0"
         android:indeterminate="false"
-        android:minWidth="450dp"/>
+        android:minWidth="600dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="0"
+        android:textSize="30dp"
         android:id="@+id/zeroTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_alignLeft="@+id/autoBallsSeekBar"
-        android:layout_alignStart="@+id/autoBallsSeekBar"
-        android:textSize="20sp"/>
+        android:layout_alignStart="@+id/autoBallsSeekBar"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="10"
+        android:textSize="30sp"
         android:id="@+id/tenTextView"
         android:layout_alignBottom="@+id/zeroTextView"
-        android:layout_toRightOf="@+id/autoBallsSeekBar"
-        android:textSize="20sp"/>
+        android:layout_toRightOf="@+id/autoBallsSeekBar" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Balls Made: 0"
+        android:textSize="30sp"
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
-        android:layout_centerHorizontal="true"
-        android:textSize="20sp"/>
+        android:layout_centerHorizontal="true" />
 
 </RelativeLayout>
