--- a/app/src/main/res/layout/auto_period_fragment.xml
+++ b/app/src/main/res/layout/auto_period_fragment.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Autonomous Period"
+        android:textSize="30dp"
         android:id="@+id/autoTextView"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -21,6 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Baseline Crossed?"
+        android:textSize="20dp"
         android:id="@+id/baselineCheckBox"
         android:layout_marginTop="30dp"
         android:layout_below="@+id/autoTextView"
@@ -31,6 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Attempted to place gear?"
+        android:textSize="20dp"
         android:id="@+id/gearAttemptCheckBox"
         android:layout_below="@+id/baselineCheckBox"
         android:layout_centerHorizontal="true"
@@ -41,6 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Gear successfully placed?"
+        android:textSize="20dp"
         android:id="@+id/gearSuccessCheckBox"
         android:layout_below="@+id/gearAttemptCheckBox"
         android:layout_centerHorizontal="true"
@@ -51,6 +55,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="High goal?"
+        android:textSize="15dp"
         android:id="@+id/highCheckBox"
         android:layout_marginTop="25dp"
         android:checked="false"
@@ -62,6 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Low goal?"
+        android:textSize="15dp"
         android:id="@+id/lowCheckBox"
         android:layout_alignTop="@+id/highCheckBox"
         android:layout_alignParentRight="true"
@@ -73,10 +79,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/autoBallsSeekBar"
         android:layout_marginTop="48dp"
-        android:max="10"
+        android:max="20"
         android:progress="0"
         android:indeterminate="false"
-        android:minWidth="250dp"
+        android:minWidth="275dp"
         android:layout_below="@+id/highCheckBox"
         android:layout_centerHorizontal="true" />
 
@@ -85,6 +91,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="0"
+        android:textSize="15dp"
         android:id="@+id/zeroTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_alignLeft="@+id/autoBallsSeekBar"
@@ -95,15 +102,17 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="10"
+        android:textSize="15dp"
         android:id="@+id/tenTextView"
         android:layout_alignBottom="@+id/zeroTextView"
-        android:layout_toRightOf="@+id/zeroTextView"
+        android:layout_alignRight="@+id/autoBallsSeekBar"
         android:layout_marginLeft="250dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Balls Made: 0"
+        android:textSize="15dp"
         android:id="@+id/ballCountTextView"
         android:layout_below="@+id/autoBallsSeekBar"
         android:layout_centerHorizontal="true" />
