--- a/app/src/main/res/layout/data_list.xml
+++ b/app/src/main/res/layout/data_list.xml
@@ -125,10 +125,18 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceMedium"
+        android:text="Alliance KPA "
+        android:id="@+id/allianceKPATextView"
+        android:layout_below="@id/gearsDroppedHumanTextView"
+        android:layout_toRightOf="@+id/climbTimeTextView"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="TBH "
         android:id="@+id/tBHTextView"
         android:layout_below="@+id/gearsDroppedHumanTextView"
-        android:layout_toRightOf="@+id/climbTimeTextView" />
+        android:layout_toRightOf="@+id/allianceKPATextView" />
 
 </RelativeLayout>
