--- a/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
+++ b/app/src/main/res/layout-xlarge-port/teleop_fragment.xml
@@ -207,13 +207,101 @@
         <SeekBar
             android:layout_width="600dp"
             android:layout_height="wrap_content"
+            android:id="@+id/reachRopeTimeSeekBar"
+            android:max="15"
+            android:progress="0"
+            android:indeterminate="false"
+            android:minWidth="250dp"
+            android:layout_below="@+id/successfulclimbcheckBox"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="45dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:text="0"
+            android:textSize="30dp"
+            android:id="@+id/zeroRopeTimeReached"
+            android:layout_below="@+id/reachRopeTimeSeekBar"
+            android:layout_alignLeft="@+id/reachRopeTimeSeekBar"
+            android:layout_alignStart="@+id/reachRopeTimeSeekBar" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:text="Time To Reach Rope: 0"
+            android:textSize="30dp"
+            android:id="@+id/reachRopeTimeTextView"
+            android:layout_below="@+id/reachRopeTimeSeekBar"
+            android:layout_centerHorizontal="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:text="15"
+            android:textSize="30dp"
+            android:id="@+id/fifteenReachRopeTimeTextView"
+            android:layout_below="@+id/reachRopeTimeSeekBar"
+            android:layout_alignRight="@+id/reachRopeTimeSeekBar"
+            android:layout_alignEnd="@+id/reachRopeTimeSeekBar"/>
+
+        <SeekBar
+            android:layout_width="600dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/alignTimeSeekBar"
+            android:max="10"
+            android:progress="0"
+            android:indeterminate="false"
+            android:minWidth="250dp"
+            android:layout_below="@+id/reachRopeTimeTextView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="45dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:text="0"
+            android:textSize="30dp"
+            android:id="@+id/zeroAlignTimeTextView"
+            android:layout_below="@+id/alignTimeSeekBar"
+            android:layout_alignLeft="@+id/alignTimeSeekBar"
+            android:layout_alignStart="@+id/alignTimeSeekBar" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:text="Align Time: 0"
+            android:textSize="30dp"
+            android:id="@+id/alignCountTextView"
+            android:layout_below="@+id/alignTimeSeekBar"
+            android:layout_centerHorizontal="true"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:text="10"
+            android:textSize="30dp"
+            android:id="@+id/tenAlignTimeTextView"
+            android:layout_below="@+id/alignTimeSeekBar"
+            android:layout_alignRight="@+id/alignTimeSeekBar"
+            android:layout_alignEnd="@+id/alignTimeSeekBar"/>
+
+        <SeekBar
+            android:layout_width="600dp"
+            android:layout_height="wrap_content"
             android:id="@+id/climbTimeSeekBar"
             android:layout_marginTop="45dp"
             android:max="20"
             android:progress="0"
             android:indeterminate="false"
             android:minWidth="250dp"
-            android:layout_below="@+id/successfulclimbcheckBox"
+            android:layout_below="@+id/alignCountTextView"
             android:layout_centerHorizontal="true" />
 
         <TextView
@@ -234,7 +322,7 @@
             android:textAppearance="?android:textAppearanceSmall"
             android:text="ClimbTime: 0"
             android:id="@+id/climbCountTextView"
-            android:textSize="35dp"
+            android:textSize="30dp"
             android:layout_below="@+id/climbTimeSeekBar"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="6dp" />
