--- a/app/src/main/res/layout/teleop_fragment.xml
+++ b/app/src/main/res/layout/teleop_fragment.xml
@@ -200,13 +200,95 @@
     <SeekBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/climbTimeSeekBar"
-        android:layout_marginTop="5dp"
-        android:max="20"
+        android:id="@+id/reachRopeTimeSeekBar"
+        android:max="15"
         android:progress="0"
         android:indeterminate="false"
         android:minWidth="250dp"
         android:layout_below="@+id/successfulclimbcheckBox"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/zeroRopeTimeReached"
+        android:layout_below="@+id/reachRopeTimeSeekBar"
+        android:layout_alignLeft="@+id/reachRopeTimeSeekBar"
+        android:layout_alignStart="@+id/reachRopeTimeSeekBar" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="Time To Reach Rope: 0"
+        android:id="@+id/reachRopeTimeTextView"
+        android:layout_below="@+id/reachRopeTimeSeekBar"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="15"
+        android:id="@+id/fifteenReachRopeTimeTextView"
+        android:layout_below="@+id/reachRopeTimeSeekBar"
+        android:layout_alignRight="@+id/reachRopeTimeSeekBar"
+        android:layout_alignEnd="@+id/reachRopeTimeSeekBar"/>
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/alignTimeSeekBar"
+        android:max="10"
+        android:progress="0"
+        android:indeterminate="false"
+        android:minWidth="250dp"
+        android:layout_below="@+id/reachRopeTimeTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="5dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="0"
+        android:id="@+id/zeroAlignTimeTextView"
+        android:layout_below="@+id/alignTimeSeekBar"
+        android:layout_alignLeft="@+id/alignTimeSeekBar"
+        android:layout_alignStart="@+id/alignTimeSeekBar" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="Align Time: 0"
+        android:id="@+id/alignCountTextView"
+        android:layout_below="@+id/alignTimeSeekBar"
+        android:layout_centerHorizontal="true"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:textAppearanceSmall"
+        android:text="10"
+        android:id="@+id/tenAlignTimeTextView"
+        android:layout_below="@+id/alignTimeSeekBar"
+        android:layout_alignRight="@+id/alignTimeSeekBar"
+        android:layout_alignEnd="@+id/alignTimeSeekBar"/>
+
+    <SeekBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/climbTimeSeekBar"
+        android:layout_marginTop="10dp"
+        android:max="20"
+        android:progress="0"
+        android:indeterminate="false"
+        android:minWidth="250dp"
+        android:layout_below="@+id/alignCountTextView"
         android:layout_centerHorizontal="true" />
 
     <TextView
